--- a/swiftgen.yml
+++ b/swiftgen.yml
@@ -15,3 +15,9 @@ strings:
   outputs:
     templateName: structured-swift5
     output: Strings.swift
+
+fonts:
+  inputs: Fonts/
+  outputs:
+    templatePath: red_hoodie_cat_font.stencil
+    output: Fonts.swift
